Čitač saobraćajne: helper je odbijao živi sajt, a poruka je krivila čitač
Prijavljeno: „čitač čita sa drugim programom, a kroz aplikaciju ne". Uzrok nije
bio ni čitač ni kartica ni drugi računar.

Helper odgovara samo sajtovima sa spiska — bez toga bi bilo koja stranica sa
interneta mogla da čita saobraćajne dok je čitač uključen. Ali na spisku su bile
SAMO lokalne razvojne adrese; produkcijski domen se dodavao jedino ako se prosledi
kao argument, a `pokreni.bat` ga nije prosleđivao. Živi sajt je dobijao 403 na
SVAKOM računaru. Helper sa živim sajtom nikad nije ni radio — isproban je dok je
aplikacija bila na localhost:5173, domen smo uzeli kasnije i niko to nije povezao.

Drugi program čita bez problema jer ne ide kroz pregledač i ne zna za domene —
otud utisak da je čitač kriv.

Ispravke:

- Domen je UGRAĐEN u ALLOWED (i www varijanta). Ne sme da zavisi od toga da li se
  neko setio argumenta.
- Access-Control-Allow-Private-Network + preflight zaglavlja: Chrome poziv sa javnog
  sajta ka 127.0.0.1 tretira kao „Private Network Access" i bez toga ga blokira.
  Ovo bi objasnilo i „radi na jednom, ne radi na drugom računaru" — verzija Chrome-a.
- Poruka je LAGALA: svaka greška je javljala „Čitač nije pokrenut", i kad je radio.
  Iz JS-a se odbijen zahtev (CORS) i ugašen server vide isto — oba su goli TypeError.
  Sada `no-cors` proba razdvaja ta dva slučaja, pa poruka kaže šta je stvarno.
- pokreni-citac.bat za računar servisa + README: kako proveriti stanje otvaranjem
  http://127.0.0.1:8765/status (bez Origin-a nema provere sajta → vidi se pravo stanje).

Test: tests/citac.py (11 provera) — ne traži ni čitač ni karticu, pokriva baš sloj
koji je bio pokvaren. Dokazan kontrolnim pokretanjem nad starim helperom: živi sajt
dobija HTTP 403, 5 provera padne.

Čitač je i dalje nezavisan od modela: PC/SC, uzima prvi čitač u kome ima kartice,
nigde nema imena ni modela. Drugi čitač ne traži izmenu koda.

Testovi: 148 provera, sve prolazi.

Co-Authored-By: Claude Opus 4.8 (1M